Move Generator into its own package and use JFX